--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               </div>
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-danger">Delete</button>
               </div>
             </div>
 
@@ -50,41 +51,41 @@
 
           </div>
           <!-- </form> -->
-          
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
-<!-- /.card-body -->
-</div>
-<!-- /.card -->
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <!-- /.card-body -->
+  </div>
+  <!-- /.card -->
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
 
 
 
   <!-- /.card-body -->
 
-  
 
 
-  <table class="table">
+
+  <table class="table" id="tableCustomer">
     <thead>
-      <tr>
+      <tr class="child">
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Customer ID</th>
+        <th scope="col">customerName</th>
+        <th scope="col">Address</th>
       </tr>
     </thead>
     <tbody>
@@ -106,6 +107,21 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+
+  <script>
+    var num1 = 1;
+    $("#submit").click(function () {
+
+      var ID = $("#customerID").val();
+      var Name = $("#customerName").val();
+      var Address = $("#customerAddress").val();
+
+
+      $('#tableCustomer tbody').append("<tr class='child' id='ch'><td> " + num1 + "</td><td>" + ID + "</td><td>" + Name + "</td><td>" + Address + "</td><td>" + "<div id='image'></div>" + "</td></tr>");
+      num1++;
+    })
+
+  </script>
 </body>
 
 </html>
