--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
               <div class="card-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-danger">Delete</button>
               </div>
             </div>
 
@@ -50,51 +51,32 @@
 
           </div>
           <!-- </form> -->
-          
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </div>
   </div>
-</div>
-</div>
-
-<!-- /.card-body -->
-</div>
-<!-- /.card -->
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-
-
-  <!-- /.card-body -->
-
-  
-
-
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+
+        <th scope="col">Customer ID</th>
+        <th scope="col">Customer Name</th>
+        <th scope="col">Customer Address</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody id="idbody">
 
 
     </tbody>
   </table>
-  </div>
 
-
+ </div>
   <!-- /Start your project here-->
 
   <!-- SCRIPTS -->
@@ -106,6 +88,17 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  
+  <script>
+  
+  var customerid = $("#customerID").text();
+  var name = $("#customerName").text();
+  var address = $("#customerAddress").text();
+
+  $("#idbody").append("<tr><td>"+customerid+"</td><td>"+name+"</td><td>"+address+"</td></tr>");
+
+  
+  </script>
 </body>
 
 </html>
